--- a/ContosoUniversity/Views/Course/Index.cshtml
+++ b/ContosoUniversity/Views/Course/Index.cshtml
@@ -50,7 +50,7 @@
             </div>
             <div class="col-md-4">
                 <div class="textbox clour2">
-                    <h3>Geeker（极客） Course</h3>
+                    <h3>Geeker（极客）</h3>
                     <p>
                         目标群体：5，6，7年级
                         通过scratch+ardunio编程，进行软硬整合的创造性学习。
