--- a/ContosoUniversity/Views/Home/About.cshtml
+++ b/ContosoUniversity/Views/Home/About.cshtml
@@ -21,7 +21,7 @@
             <div class="row">
                 <div class="col-md-12">
                     <div class="about-logo">
-                        <h3>We are awesome <span class="color">我们的团队</span></h3>
+                        <h3> <span class="color">我们的团队</span></h3>
                         <p>团队成员主要来自于中英两国，团队成员在不同文化中交流碰撞，用国际化的视野设计产品，将先进的理念
 与本土化实施紧密融合，将STEM教育精髓深深浸入整个产品设计研发中。
 </p>
@@ -38,20 +38,14 @@
                 </div>
                 <div class="col-md-6">
                     <p>
-                        我们的宗旨：
-                        快乐学习：编个游戏就可以将数学、物理、英语等等知识进行整合，在创作中学习，在应用中学习，在玩中学习。
-                        全球视野：编写的游戏可以和全世界分享，同时可以学习全世界的作品。在学习中交流，在交流中学习，从而培养全球视野。
-                        掌控未来：未来社会是一个人工智能高度发展，机器人横行的时代，计算机素养将是未来重要技能
-                       
+                        <P>我们的宗旨：</P>
+                        <P>快乐学习：编个游戏就可以将数学、物理、英语等等知识进行整合，在创作中学习，在应用中学习，在玩中学习。</p>
+                        <p> 因材施教：小班教学，个性化针对性指导。</p>
+                        <p>全球视野：作品可以和全世界分享，同时可以学习全世界优秀的作品。在学习中交流，在交流中学习，从而培养全球视野</p>
+                        <p>掌控未来：未来社会是一个人工智能高度发展，机器人横行的时代，计算机素养将是未来重要技能</p>
                     </p>
-                           <p> 因材施教：5人小班教学，个性化针对性指导。</p>
-                    <ul class="list-unstyled">
-                        <li><i class="fa fa-arrow-circle-right pr-10 colored"></i> Lorem ipsum enimdolor sit amet</li>
-                        <li><i class="fa fa-arrow-circle-right pr-10 colored"></i> Explicabo deleniti neque aliquid</li>
-                        <li><i class="fa fa-arrow-circle-right pr-10 colored"></i> Consectetur adipisicing elit</li>
-                        <li><i class="fa fa-arrow-circle-right pr-10 colored"></i> Lorem ipsum dolor sit amet</li>
-                        <li><i class="fa fa-arrow-circle-right pr-10 colored"></i> Quo issimos molest quibusdam temporibus</li>
-                    </ul>
+                        
+       
                 </div>
             </div>
             <br />
@@ -81,14 +75,15 @@
                             <div class="panel-heading">
                                 <h4 class="panel-title">
                                     <a data-toggle="collapse" data-parent="#accordion-alt3" href="#collapseOne-alt3">
-                                        <i class="fa fa-angle-right"></i> Accordion Heading Text Item # 1
+                                        <i class="fa fa-angle-right"></i>STEM教育理念
                                     </a>
                                 </h4>
                             </div>
                             <div id="collapseOne-alt3" class="panel-collapse collapse">
                                 <!-- Panel body -->
                                 <div class="panel-body">
-                                    Sed ut perspiciaatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas
+                                   STEM教育本质是跨学科系统学习的教学体系，绝不是依赖某个设备与玩具的简单碎片化的构建。一定要用开放的技术，开源的硬件，开阔的视野进行进行学科系统的整合，让学生在动手解决问题
+                                    中学习，提高学生知识应用能力、激发学生学习兴趣、提升学生创造与创新能力、系统整合能力以及控制智能设备能力。
                                 </div>
                             </div>
                         </div>
@@ -96,13 +91,13 @@
                             <div class="panel-heading">
                                 <h4 class="panel-title">
                                     <a data-toggle="collapse" data-parent="#accordion-alt3" href="#collapseTwo-alt3">
-                                        <i class="fa fa-angle-right"></i> Accordion Heading Text Item # 2
+                                        <i class="fa fa-angle-right"></i>构建主义教育理念
                                     </a>
                                 </h4>
                             </div>
                             <div id="collapseTwo-alt3" class="panel-collapse collapse">
                                 <div class="panel-body">
-                                    Sed ut perspiciaatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas
+                                    将学习的实践定位为“创造世界”（认知性、文化性实践）、探索自我（伦理性、存在性实践）和结交伙伴（社会性、政治性实践）相互媒介三位一体的实践。这种实践借助的工具就是“屏幕”，通过各种“屏幕”介质，让学习者在自己的体验与经验中学习，从而构建自己对世界、自己、共同体的认识，让每个学习者成为自己，提升学力能力，从而更好地适应时代的发展趋势
                                 </div>
                             </div>
                         </div>
@@ -110,13 +105,13 @@
                             <div class="panel-heading">
                                 <h4 class="panel-title">
                                     <a data-toggle="collapse" data-parent="#accordion-alt3" href="#collapseThree-alt3">
-                                        <i class="fa fa-angle-right"></i> Accordion Heading Text Item # 3
+                                        <i class="fa fa-angle-right"></i> 人本主义教育理念
                                     </a>
                                 </h4>
                             </div>
                             <div id="collapseThree-alt3" class="panel-collapse collapse">
                                 <div class="panel-body">
-                                    Sed ut perspiciaatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas
+                                    每一个人都是独一无二的，尊重每个人的价值，肯定每个人的价值，帮助每个人做最好的自己。
                                 </div>
                             </div>
                         </div>
@@ -124,13 +119,13 @@
                             <div class="panel-heading">
                                 <h4 class="panel-title">
                                     <a data-toggle="collapse" data-parent="#accordion-alt3" href="#collapseFour-alt3">
-                                        <i class="fa fa-angle-right"></i> Accordion Heading Text Item # 4
+                                        <i class="fa fa-angle-right"></i>学习共同体
                                     </a>
                                 </h4>
                             </div>
                             <div id="collapseFour-alt3" class="panel-collapse collapse">
                                 <div class="panel-body">
-                                    Sed ut perspiciaatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas
+                                    课堂以学习共同体进行学习组织，细化每节课程任务，将任务分解与分配。让学习者在学习过程中进行沟通与连接，让学习者在同伴的交流、协作中进行学习
                                 </div>
                             </div>
                         </div>
