--- a/ContosoUniversity/Views/Gallery/gallery.cshtml
+++ b/ContosoUniversity/Views/Gallery/gallery.cshtml
@@ -22,9 +22,19 @@
 				<div class="row no-gutter">
 					<section id="projects">
 					<div id="thumbs">
+                        <div class="item-thumbs col-lg-3 col-md-4 col-sm-4 work design" data-id="id-0" data-type="web">
+                            <a class="work-box fancybox" data-fancybox-group="gallery" title="Gallery name" href="~/img/works/4.jpg">
+                                <div class="overlay">
+                                    <div class="overlay-caption">
+                                        <p><span class="fa fa-search"></span></p>
+                                    </div>
+                                </div>
+                            </a>
+                            <img src="~/img/works/4.jpg" alt="">
+                        </div>
 						<!-- Item Project and Filter Name -->
 						<div class="item-thumbs col-lg-3 col-md-4 col-sm-4 work design" data-id="id-0" data-type="web"> 						
-					     <a class="work-box fancybox" data-fancybox-group="gallery"  title="Gallery name" data-toggle="modal" data-target="#myModal1">						
+					     <a class="work-box fancybox" data-fancybox-group="gallery"  title="为什么要学编程" data-toggle="modal" data-target="#myModal1">						
 						   <div class="overlay">
 							  <div class="overlay-caption">
 								<p><span class="fa fa-search"></span></p>
@@ -36,7 +46,7 @@
 						<!-- End Item Project -->	
 						<!-- Item Project and Filter Name -->
 						<div class="item-thumbs col-lg-3 col-md-4 col-sm-4 work design" data-id="id-1" data-type="icon"> 
-						<a class="work-box fancybox" data-fancybox-group="gallery" title="Gallery name" href="~/img/works/2.jpg">
+						<a class="work-box fancybox" data-fancybox-group="gallery" title="教育的本质来自心底的爱"data-toggle="modal" data-target="#myModal2">
 						 <div class="overlay">
 							  <div class="overlay-caption">
 								<p><span class="fa fa-search"></span></p>
@@ -49,7 +59,7 @@
 						
 						<!-- Item Project and Filter Name -->
 						<div class="item-thumbs col-lg-3 col-md-4 col-sm-4 work photography" data-id="id-2" data-type="graphic"> 
-						<a class="work-box fancybox" data-fancybox-group="gallery" title="Gallery name" href="~/img/works/3.jpg">
+						<a class="work-box fancybox" data-fancybox-group="gallery" title="什么是STEM"data-toggle="modal" data-target="#myModal3">
 						 <div class="overlay">
 							  <div class="overlay-caption">
 								<p><span class="fa fa-search"></span></p>
@@ -61,19 +71,10 @@
 						<!-- End Item Project -->
 						
 						<!-- Item Project and Filter Name -->
-						<div class="item-thumbs col-lg-3 col-md-4 col-sm-4 work design" data-id="id-0" data-type="web"> 
-						<a class="work-box fancybox" data-fancybox-group="gallery" title="Gallery name" href="~/img/works/4.jpg">
-						 <div class="overlay">
-							  <div class="overlay-caption">
-								<p><span class="fa fa-search"></span></p>
-							  </div>
-							</div>
-						</a> 
-						<img src="~/img/works/4.jpg" alt="">
-						</div>
+
 						<!-- End Item Project -->
 						
-						<!-- Item Project and Filter Name -->
+						@*<!-- Item Project and Filter Name -->
 						<div class="item-thumbs col-lg-3 col-md-4 col-sm-4 work photography" data-id="id-4" data-type="web"> 
 						<a class="work-box fancybox" data-fancybox-group="gallery" title="Gallery name" href="~/img/works/5.jpg">
 						 <div class="overlay">
@@ -112,7 +113,7 @@
 						<!-- End Item Project -->
 				
 					
-                        </div>
+                        </div>*@
                         </section>
                     <section id="videos">
                         @*视频模板，添加时更改id*@
@@ -127,6 +128,35 @@
                                         @*在这里放置视频*@
                                         <iframe frameborder="0" width="1024" height="768" src="http://v.qq.com/iframe/player.html?vid=g0315wa8u99&tiny=0&auto=0" allowfullscreen></iframe>
                                     </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div id="myModal2" class="modal fade bs-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
+                            <div class="modal-dialog " style="width:1085px;">
+                                <div class="modal-content">
+                                    <div class="modal-header">
+                                        <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+                                        <h4 class="modal-title" id="myModalLabel">教育的本质来自心底的爱</h4>
+                                    </div>
+                                    <div class="modal-body">
+                                        @*在这里放置视频*@
+                                        <iframe frameborder="0" width="1024" height="768" src="http://v.qq.com/iframe/player.html?vid=s03320h8xrm&tiny=0&auto=0" allowfullscreen></iframe>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div id="myModal3" class="modal fade bs-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
+                            <div class="modal-dialog " style="width:1085px;">
+                                <div class="modal-content">
+                                    <div class="modal-header">
+                                        <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+                                        <h4 class="modal-title" id="myModalLabel">什么是STEM</h4>
+                                    </div>
+                                    <div class="modal-body">
+                                        @*在这里放置视频*@
+                                
+                                        <iframe height=768 width=1024 src='http://player.youku.com/embed/XNzc1ODc5NTI4' frameborder=0 'allowfullscreen'></iframe>
+                                      </div>
                                 </div>
                             </div>
                         </div>
