--- a/ContosoUniversity/Views/Home/Index.cshtml
+++ b/ContosoUniversity/Views/Home/Index.cshtml
@@ -182,7 +182,7 @@
             </div>
             <div class="col-md-4">
                 <div class="textbox clour2">
-                    <h3>Geeker（极客） Course</h3>
+                    <h3>Geeker（极客）</h3>
                     <p>目标群体：5，6，7年级
 通过scratch+ardunio编程，进行软硬整合的创造性学习。
 掌握软硬件的基本通信原理，提高学生逻辑计算能力，解决问题能力、创新能力
