--- a/ContosoUniversity/Content/Site.css
+++ b/ContosoUniversity/Content/Site.css
@@ -115,7 +115,7 @@ header .navbar-default .navbar-nav > .open > a:focus {
 }
 
 header .navbar-nav > li.active {
-    background: #DE3B69;
+    background: #CF2553;
     color: #fff;
 }
 header .navbar-nav > li { 
@@ -454,7 +454,7 @@ line-height: 30px;
 font-style: italic;
 } 
 section.hero-text {
-	background: #DE3B69;
+	background: #CF2553;
 	padding: 50px 0;
 	color: #fff;
 }
@@ -550,7 +550,7 @@ section.hero-text {
 ==================================== */
 
 #inner-headline{
-	background: #FF9F16;
+	background: #FFAB2E;
 	position:relative;
 	margin:0;
 	padding:0;
@@ -1787,15 +1787,20 @@ padding:50px 0
 	}
 .textbox { 
     padding: 4px 25px;
+    color:white;
 }
+.textbox h3{
+    color:white;
+}
+
 .clour1 {
-	background: #84D7FF;
+	background: #CF2553;
 }
 .clour2 {
-	background: #94F9AB;
+	background: #00B0D9;
 }
 .clour3{
-	background: #FFC3E6;
+	background: #6DBE45;
 }
 .clour4 {
 	background: #D1C8FF;
