--- a/ContosoUniversity/Views/Home/Index.cshtml
+++ b/ContosoUniversity/Views/Home/Index.cshtml
@@ -164,7 +164,7 @@
 	<div class="container">
         <div class="row">
             <div class="col-lg-12">
-                <div class="aligncenter"><h2 class="aligncenter" style="background:#ff6a00">课程体系</h2><h4><span class="clear spacer_responsive_hide_mobile " style="height:15px;display:block;font-family:KaiTi;font-size:medium"></span>icoding Academy团队从2014年开始进行STEM教育本土化的推广与实践，设计出一套以T（技术）为驱动，将校本教材与STEM教育结合的教学体系。该体系分为Maker（创客）、Geeker(极客)、Hacker（骇客）三个阶段覆盖从小学、初中、高中整个学习阶段。
+                <div class="aligncenter"><h2 class="aligncenter">课程体系</h2><h4><span class="clear spacer_responsive_hide_mobile " style="height:15px;display:block;font-family:KaiTi;font-size:medium"></span>icoding Academy团队从2014年开始进行STEM教育本土化的推广与实践，设计出一套以T（技术）为驱动，将校本教材与STEM教育结合的教学体系。该体系分为Maker（创客）、Geeker(极客)、Hacker（骇客）三个阶段覆盖从小学、初中、高中整个学习阶段。
                     </h4></div>
             </div>
         </div>
