--- a/ContosoUniversity/Views/Shared/_Layout.cshtml
+++ b/ContosoUniversity/Views/Shared/_Layout.cshtml
@@ -3,12 +3,14 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>@ViewBag.Title - Contoso University</title>
+    <title>@ViewBag.Title - Icoding Academy</title>
     @Styles.Render("~/Content/css")
 	   @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
+    <link rel="shortcut icon" href="~/img/favicon.ico" />
     <link href="~/Content/animate.css" rel="stylesheet" />
     <script src="~/Scripts/wow.js"></script>
+
 </head>
 <body>
     <div id="wrapper">
@@ -49,6 +51,7 @@
                                     Yuhua
                                 </address>
                                 <p>
+                                    <i class="icon-phone"></i> 85850152 <br>
                                     <i class="icon-phone"></i> 18132047903 <br>
                                     <i class="icon-envelope-alt"></i> k12stem@163.com
                                 </p>
